--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nadia Khansa Manaf - Website Pribadi</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -126,6 +126,6 @@
         <button class="nav-btn" data-target="contact">Kontak</button>
     </nav>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
