--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 <div class="card-container">
                     <div class="data-card profile-card">
                         <div class="profile-img-container">
-                            <img src="https://via.placeholder.com/200" alt="Foto Sekolah Nadia" class="profile-img">
+                            <img src="foto sekolah.jpg" alt="Foto Sekolah Nadia" class="profile-img">
                         </div>
                         <div class="profile-text">
                             <h3>Profil</h3>
